fix spacing and thumbnail image

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -310,6 +310,20 @@ b, strong {
   color: #ffffff !important;
 }
 
+.btn2 {
+  display:inline-block;
+  font-weight:400;
+  color:#212529;
+  text-align:center;
+  vertical-align:middle;
+  background-color:transparent;
+  border:1px solid transparent;
+  padding:.375rem .75rem;
+  font-size:1rem;
+  line-height:1.5;
+  border-radius:.25rem;
+}
+
 .custom-btn2 {
   border: 2px solid #474559;
   color: #fff;
